master: cambios Georgy

--- a/ejcss_1.html
+++ b/ejcss_1.html
@@ -1,13 +1,17 @@
 ﻿<html>
-  <head>
+
+<head>
     <title>Ejercicio 1</title>
     <link rel="stylesheet" href="estilo1.css" type="text/css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <h1 class="subrayado">Titulo del primer ejercicio DAW / Rafa</h1>
     <p>
-      Esto es un párrafo <span class="tachado">de prueba</span> para tachar y
-      <span class="subrayado">subrayar</span>
+        Esto es un párrafo <span class="tachado">de prueba</span> para tachar y
+        <span class="subrayado">subrayar</span>
     </p>
-  </body>
+    <p>Elemento p creado por Georgy</p>
+</body>
+
 </html>
